// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Homepage Renders logged in on system level 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "xrv2vm",
          "pathname": "/160677/1",
          "search": "",
          "state": undefined,
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "xrv2vm",
        "pathname": "/160677/1",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Route
    path="/:system_id/:event_id"
  >
    <Homepage />
  </Route>
</Router>
`;

exports[`Homepage Renders logged out 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "owfxhm",
          "pathname": "/160677/1",
          "search": "",
          "state": undefined,
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "owfxhm",
        "pathname": "/160677/1",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Route
    path="/:system_id/:event_id"
  >
    <Homepage />
  </Route>
</Router>
`;
